# ardezan

./: .gitignore  LICENSE  README.md  dev.py
backend/: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  logging_setup.py  main.py  observability.py  queue.py  rate_limit.py  security.py  storage.py
backend/app/agents/: __init__.py  mcp_toolset.py  stylist_agent.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: __init__.py  ai_repository.py  ai_router.py  ai_schemas.py  ai_service.py  audit_logs_router.py  commerce_router.py  customers_router.py  dashboard_router.py  deps.py  fabrics_router.py  inspirations_router.py  media_service.py  orders_repository.py  orders_router.py  orders_schemas.py  orders_service.py  products_repository.py  products_router.py  products_schemas.py  products_service.py  repository.py  router.py  schemas.py  service.py  site_media_router.py
backend/app/modules/cart/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/catalog/: __init__.py  repository.py  router.py  schemas.py
backend/app/modules/checkout/: __init__.py  router.py  (+4 more)
backend/scripts/: backfill_gender.py  migrate_local_to_b2.py  prune_orphan_media.py  regenerate_catalog_photos.py  regenerate_site_imagery.py  render_design_showcases.py  seed_cousin_catalog.py  seed_fabrics.py  seed_inspirations.py  wipe_catalog.py
backend/tests/: conftest.py  test_cart.py  test_health.py  test_inventory.py  test_order_tryon.py  test_rate_limit.py  test_retention.py  test_security.py  test_verification.py  test_webhooks.py
backend/worker/: __init__.py  main.py
backend/worker/jobs/: __init__.py  email.py  health.py  inventory_alerts.py  inventory_holds.py  retention.py  tryon.py
(+183 files in other folders)
